06-falco-overview/falco-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: falcosidekick-ui-route
  namespace: falco
spec:
  parentRefs:
    - name: gateway-lab
      namespace: envoy-gateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /falco
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: falco-falcosidekick-ui
          port: 2802
    
    # Rutas adicionales para cargar los assets estáticos de Vue.js (SPA)
    # y las llamadas a la API backend que la UI realiza hacia la raíz.
    - matches:
        - path:
            type: PathPrefix
            value: /css
        - path:
            type: PathPrefix
            value: /js
        - path:
            type: PathPrefix
            value: /img
        - path:
            type: PathPrefix
            value: /fonts
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: falco-falcosidekick-ui
          port: 2802
